<resources>
    <string name="app_name">Барцев Александр</string>
    <string name="counter_left">4</string>
    <string name="title_left">Рейтинг</string>
    <string name="counter_center">5</string>
    <string name="title_center">Написано строк кода</string>
    <string name="counter_right">6</string>
    <string name="title_right">Проектов</string>
    <string name="hint_phone">Мобильный</string>
    <string name="phone">+7 (927)123-55-66</string>
    <string name="hint_email">E-mail</string>
    <string name="email">shurets@yandex.ru</string>
    <string name="hint_vk_profile">Профиль в VK</string>
    <string name="vk_profile">vk.com/id1234518</string>
    <string name="hint_repository">Репозиторий</string>
    <string name="repository">github.com/shurets/DevIntensive</string>
    <string name="hint_about_me">О себе</string>
    <string name="about_me"></string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>

    <!-- Font family -->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>

    <string name="auth.authorization_enter">войти</string>
    <string name="auth.email">Введите e-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>
</resources>
