<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_size"
                android:scaleType="centerCrop"
                android:src="@drawable/user_photo"
                android:fitsSystemWindows="true"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_marginTop="@dimen/size_small_24"
                android:theme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/white"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/grey_dark"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/title_box"
                android:layout_weight="1">
                <TextView
                    style="@style/title.title_large"
                    android:text="@string/counter_left"/>
                <TextView
                    style="@style/title"
                    android:text="@string/title_left"/>
            </LinearLayout>

            <View style="@style/vert_line"/>

            <LinearLayout
                style="@style/title_box"
                android:layout_weight="2">
                <TextView
                    style="@style/title.title_large"
                    android:text="@string/counter_center"/>
                <TextView
                    style="@style/title"
                    android:text="@string/title_center"/>
            </LinearLayout>

            <View style="@style/vert_line"/>

            <LinearLayout
                style="@style/title_box"
                android:layout_weight="1">
                <TextView
                    style="@style/title.title_large"
                    android:text="@string/counter_right"/>
                <TextView
                    style="@style/title"
                    android:text="@string/title_right"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/line_container">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout style="@style/edit_container">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                   <EditText
                       android:id="@+id/phone_et"
                       style="@style/editor"
                       android:hint="@string/hint_phone"
                       android:text="@string/phone"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View style="@style/horz_line"/>

        <LinearLayout style="@style/line_container">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout style="@style/edit_container">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/editor"
                        android:hint="@string/hint_email"
                        android:text="@string/email"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View style="@style/horz_line"/>

        <LinearLayout style="@style/line_container">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_24dp"/>

            <LinearLayout style="@style/edit_container">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/editor"
                        android:hint="@string/hint_vk_profile"
                        android:text="@string/vk_profile"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/horz_line"/>

        <LinearLayout style="@style/line_container">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_octocat_24dp"/>

            <LinearLayout style="@style/edit_container">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/github_et"
                        style="@style/editor"
                        android:hint="@string/hint_repository"
                        android:text="@string/repository"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/horz_line"/>

        <LinearLayout style="@style/line_container">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout style="@style/edit_container">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/editor"
                        android:hint="@string/hint_about_me"
                        android:text="@string/about_me"
                        android:inputType="textMultiLine"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
        </LinearLayout>

</android.support.v4.widget.NestedScrollView>
        
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginRight="@dimen/fab_right_space"/>

</android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>