<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/grey_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/user_info_rait_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Рейтинг"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_small_14"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="@dimen/size_medium_56"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/user_info_code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Написано строк кода"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_small_14"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size"
                android:layout_height="@dimen/size_medium_56"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/user_info_projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_medium_20"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Проектов"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_small_14"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/line_container">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_octocat_24dp"/>

            <ListView
                android:id="@+id/repositories_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                />


            <ImageView
                android:id="@+id/github_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/horz_line"/>

        <LinearLayout style="@style/line_container">

            <ImageView
                android:id="@+id/about_img"
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout style="@style/edit_container">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/editor"
                        android:hint="@string/hint_about_me"
                        android:text="@string/about_me"
                        android:inputType="textMultiLine"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>